# ruta

./: Makefile  README.md  bootstrap.sh  pyproject.toml  requirements.txt
freyr/: manage.py
freyr/freyr/: asgi.py  settings.py  urls.py  wsgi.py
freyr/irrigate/: admin.py  apps.py  constants.py  gpio.py  models.py  monitor.py  schedule.py  weather.py
freyr/irrigate/management/commands/: create_schedule_days.py  run_scheduled_jobs.py  stop_all.py
freyr/irrigate/migrations/: 0001_initial.py  0005_auto_20210522_0143.py  0009_delete_scheduleday.py  0010_alter_actuatorrunlog_end_datetime.py
freyr/irrigate/tests/: test_models.py  test_schedule.py
ruta/: manage.py
ruta/irrigate/: admin.py  apps.py  constants.py  forms.py  gpio.py  models.py  monitor.py  schedule.py  urls.py  views.py  weather.py
ruta/irrigate/management/commands/: run_scheduled_jobs.py  stop_all.py
ruta/irrigate/migrations/: 0001_initial.py  0002_auto_20210521_2128.py  0003_auto_20210521_2135.py  0004_auto_20210521_2147.py  0005_auto_20210522_0143.py  0006_auto_20210522_0158.py  0007_auto_20210522_0225.py  0008_auto_20210522_2225.py  0009_delete_scheduleday.py  0010_alter_actuatorrunlog_end_datetime.py  0011_auto_20210801_0034.py  0012_scheduletime_duration_in_minutes.py  0013_scheduletime_enabled.py  0014_actuator_grass_seed_mode.py
ruta/irrigate/templates/irrigate/: dashboard.html  login.html
ruta/irrigate/tests/: test_models.py  test_monitor.py  test_schedule.py  test_views.py  test_weather.py
ruta/ruta/: asgi.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
