[tool.poetry]
name = "freyr"
version = "0.1.0"
description = "Simple rasperry pi controller for irrigation system"
authors = ["Aaron Kosel <aaronjkosel@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
